# php2node_cli

./: .gitignore  CLAUDE.md  README.md  example.env  filter_v1.py  pyproject.toml  setup.sh  toolmigration.sh  xib.sh
php2node_cli/: build_inventory.py  cli.py  domain_map.json  extractor.py  inventory.py  report.py  resolver.py  scaffold_akisi.py  scaffold_nest.py  scaffold_node.py  translator.py  transpiler.py  utils.py
php2node_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
